--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@
 src/br/com/sistemaescolar/data/cidades.txt
 src/br/com/sistemaescolar/data/alunos.txt
 src/br/com/sistemaescolar/data/usuarios.txt
+src/br/com/sistemaescolar/data/curso.txt
+src/br/com/sistemaescolar/data/fase.txt
+src/br/com/sistemaescolar/data/disciplina.txt
+src/br/com/sistemaescolar/data/professor.txt
